--- a/12. Paths/index.html
+++ b/12. Paths/index.html
@@ -10,6 +10,21 @@
             stroke:black;
             stroke-width:1px;
         }
+        .red{
+            stroke:red;
+            stroke-width: 1px;
+        }
+        .redFill{
+            fill: red;
+            fill-opacity: 0.7;
+        }
+        .text{
+            font-size: 11px;
+            font-family: sans-serif;
+        }
+        .dash{
+            stroke-dasharray: 5px;
+        }
     </style>
 </head>
 <body>
@@ -18,7 +33,7 @@
     <script>
         var HEIGHT = 400;
         var WIDTH = 600;
-        var PADDING = 30;
+        var PADDING = 40;
 
         // Load data 
         var parseCSV = function(d){
@@ -32,7 +47,6 @@
         var dataset;
         d3.csv("./monthly.csv", parseCSV).then(function(d){
             dataset = d;
-            console.log(dataset);
             buildChart();
         })
 
@@ -68,16 +82,75 @@
                .attr("transform","translate("+PADDING+",0)")
                .call(yAxis)
 
+            var dangerZone = 500;
+
+            svg.append("clipPath")
+               .attr("id","safeZone")
+               .append("rect")
+               .attr("x", 0)
+               .attr("y", yScale(dangerZone))
+               .attr("width",WIDTH)
+               .attr("height",HEIGHT-yScale(dangerZone))
+
+            svg.append("clipPath")
+               .attr("id","dangerZone")
+               .append("rect")
+               .attr("x", 0)
+               .attr("y", 0)
+               .attr("width",WIDTH)
+               .attr("height",yScale(dangerZone))
 
 
             var line = d3.line()
                          .x(function(d){return xScale(d.date)})
                          .y(function(d){return yScale(d.value)})
+                         .defined(function(d){return d.value })
+
+            var dangerLine = d3.line()
+                         .x(function(d){return xScale(d.date)})
+                         .y(function(d){return yScale(d.value)})
+                        //  .defined(function(d){return d.value >= dangerZone})
+
+            var dangerArea = d3.area()
+                               .x(function(d){return xScale(d.date)})
+                               .y0(function(d){return yScale(dangerZone)})
+                               .y1(function(d){return yScale(d.value)})
+                            //    .defined(function(d){return d.value>=dangerZone})
+            
+            var dash = d3.line()
+                         .x(function(d){return xScale(d.date)})
+                         .y(function(d){return yScale(dangerZone);})
 
             svg.append("path")
                .datum(dataset)
                .attr("class","line")
                .attr("d", line)
+               .attr("clip-path","url(#safeZone)")
+
+            svg.append("path")
+               .datum(dataset)
+               .attr("class","red line")
+               .attr("d", dangerLine)
+               .attr("clip-path","url(#dangerZone)")
+
+            svg.append("path")
+               .datum(dataset)
+               .attr("class","red line dash")
+               .attr("d", dash)
+
+            svg.append("path")
+               .datum(dataset)
+               .attr("class","redFill")
+               .attr("d",dangerArea)
+               .attr("clip-path","url(#dangerZone)")
+
+            svg.append("text")
+               .attr("x", PADDING+5)
+               .attr("y", yScale(dangerZone)+10)
+               .attr("class","text redFill")
+               .text("Danger zone: "+dangerZone)
+
+            
 
             // Add points 
 
